project/stage/tests/accept/empty_functions/w_params/single_param/boolean_func_int_param.ul
void fO_123456789_Xa (int asdf_kdf23_ ) { }
