project/stage/tests/reject/bad_statements/bad_while/scalar_assignment_in_condition.ul
int F() {
    while(  temp=0 ) { }
}
